err/avisdk.err
Listing '.'...
Listing './bin'...
Compiling './bin/virtualservice_examples_api.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/avi'...
Listing './lib/python3.5/site-packages/avi/sdk'...
Listing './lib/python3.5/site-packages/avi/sdk/samples'...
Listing './lib/python3.5/site-packages/avi/sdk/samples/apic'...
Listing './lib/python3.5/site-packages/avi/sdk/samples/certs'...
Listing './lib/python3.5/site-packages/avi/sdk/samples/heat'...
Listing './lib/python3.5/site-packages/avi/sdk/samples/init_system'...
Listing './lib/python3.5/site-packages/avi/sdk/samples/init_system/examples'...
Compiling './lib/python3.5/site-packages/avi/sdk/samples/inventory_example.py'...
***   File "./lib/python3.5/site-packages/avi/sdk/samples/inventory_example.py", line 116
    print 'Data for Virtualservice ', vs_data.name
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/avi/sdk/samples/se_vs_metrics.py'...
***   File "./lib/python3.5/site-packages/avi/sdk/samples/se_vs_metrics.py", line 61
    print 'metrics query', mq
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/avi/sdk/test'...
Listing './lib/python3.5/site-packages/avi/sdk/utils'...
Listing './lib/python3.5/site-packages/avi/sdk/utils/mesos'...
Listing './lib/python3.5/site-packages/avisdk-17.2.5.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
